Nginx Ingress/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev
  labels:
    app: nginx
spec:
  ports:
  - port: 8000
    targetPort: 80
  selector:
    app: nginx
